--- a/Lab3/Base.lproj/GameStoryBoard~.storyboard
+++ b/Lab3/Base.lproj/GameStoryBoard~.storyboard
@@ -22,7 +22,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Start Game"/>
                                 <connections>
-                                    <segue destination="sqH-68-tI4" kind="show" id="Vdb-2D-ml7"/>
+                                    <segue destination="BV1-FR-VrT" kind="show" id="Vdb-2D-ml7"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -34,11 +34,18 @@
             </objects>
             <point key="canvasLocation" x="-650" y="133"/>
         </scene>
-        <!--GameStoryBoard-->
-        <scene sceneID="sqP-Nz-uBd">
+        <!--Game View Controller-->
+        <scene sceneID="tXr-a1-R10">
             <objects>
-                <viewControllerPlaceholder storyboardName="GameStoryBoard" id="sqH-68-tI4" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hGe-W0-che" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="BV1-FR-VrT" customClass="GameViewController" customModule="Lab3" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" id="3se-qz-xqx" customClass="SKView">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="4qk-I5-YsI"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="231" y="133"/>
         </scene>
