--- a/Lab3/StepsGUI.storyboard
+++ b/Lab3/StepsGUI.storyboard
@@ -193,11 +193,12 @@
                                 <constraint firstItem="OtX-Wo-Til" firstAttribute="centerY" secondItem="yHR-Lq-fYO" secondAttribute="centerY" id="Goh-9d-4FR"/>
                             </constraints>
                         </view>
-                        <barButtonItem key="rightBarButtonItem" title="🏅✏️" id="vcH-zy-uSf">
+                        <barButtonItem key="rightBarButtonItem" title="🚶🏻🚶🏼‍♀️🏅" id="vcH-zy-uSf">
                             <inset key="largeContentSizeImageInsets" minX="10" minY="1" maxX="10" maxY="1"/>
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="editStepGoal:" destination="q78-of-hBd" id="nNg-ru-9K5"/>
+                                <segue destination="EhL-yU-HrA" kind="presentation" id="PIj-nR-hoK"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -216,6 +217,115 @@
             </objects>
             <point key="canvasLocation" x="551.25" y="372.88732394366195"/>
         </scene>
+        <!--Goal View Controller-->
+        <scene sceneID="JUO-KI-bKH">
+            <objects>
+                <viewController id="EhL-yU-HrA" customClass="GoalViewController" customModule="Lab3" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="my5-vA-9Gq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="trophy" translatesAutoresizingMaskIntoConstraints="NO" id="hSy-mp-Sq2">
+                                <rect key="frame" x="96" y="44" width="128" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="LyB-th-BtO"/>
+                                    <constraint firstAttribute="width" constant="128" id="cFv-3C-Zzb"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Daily Step Goal" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8KI-7p-6xq">
+                                <rect key="frame" x="16" y="180" width="288" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qgu-ro-Lh2">
+                                <rect key="frame" x="110" y="212" width="100" height="30"/>
+                                <color key="backgroundColor" white="0.10000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="SSd-lO-vqU"/>
+                                    <constraint firstAttribute="width" constant="100" id="y9q-Lf-mQE"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" keyboardAppearance="alert" returnKeyType="done" smartDashesType="no" smartInsertDeleteType="no"/>
+                            </textField>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1000" minValue="100" maxValue="10000" translatesAutoresizingMaskIntoConstraints="NO" id="sTj-83-1ii">
+                                <rect key="frame" x="14" y="250" width="292" height="31"/>
+                                <connections>
+                                    <action selector="sliderMoved:" destination="EhL-yU-HrA" eventType="valueChanged" id="hHz-q3-r8I"/>
+                                </connections>
+                            </slider>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5vh-Sm-JSE">
+                                <rect key="frame" x="85" y="288" width="150" height="20"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cBv-lK-Piv">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="cau-MN-Gu1"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.10000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Save">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="saveAction:" destination="EhL-yU-HrA" eventType="touchUpInside" id="qa3-Du-Yi6"/>
+                                        </connections>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VJe-EX-LZJ">
+                                        <rect key="frame" x="50" y="0.0" width="50" height="20"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="juz-4D-vo2"/>
+                                            <constraint firstAttribute="height" constant="20" id="twa-U6-7Fu"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j4R-Lh-kBB">
+                                        <rect key="frame" x="100" y="0.0" width="50" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="ra9-lb-UL8"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Back">
+                                            <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="backPressed:" destination="EhL-yU-HrA" eventType="touchUpInside" id="ZgZ-tW-99J"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="hSy-mp-Sq2" firstAttribute="top" secondItem="Vs3-Xl-1IY" secondAttribute="top" constant="24" id="3oY-ma-vZn"/>
+                            <constraint firstItem="5vh-Sm-JSE" firstAttribute="centerX" secondItem="Vs3-Xl-1IY" secondAttribute="centerX" id="92Y-SQ-9ke"/>
+                            <constraint firstItem="Vs3-Xl-1IY" firstAttribute="trailing" secondItem="sTj-83-1ii" secondAttribute="trailing" constant="16" id="9ip-Mm-nCK"/>
+                            <constraint firstItem="8KI-7p-6xq" firstAttribute="leading" secondItem="Vs3-Xl-1IY" secondAttribute="leading" constant="16" id="Orf-u3-ywC"/>
+                            <constraint firstItem="hSy-mp-Sq2" firstAttribute="centerX" secondItem="Vs3-Xl-1IY" secondAttribute="centerX" id="Piu-ab-CX8"/>
+                            <constraint firstItem="qgu-ro-Lh2" firstAttribute="centerX" secondItem="Vs3-Xl-1IY" secondAttribute="centerX" id="QO9-jL-Lb4"/>
+                            <constraint firstItem="8KI-7p-6xq" firstAttribute="top" secondItem="hSy-mp-Sq2" secondAttribute="bottom" constant="8" id="RP8-Xa-Hvt"/>
+                            <constraint firstItem="Vs3-Xl-1IY" firstAttribute="trailing" secondItem="8KI-7p-6xq" secondAttribute="trailing" constant="16" id="iPp-nv-poo"/>
+                            <constraint firstItem="qgu-ro-Lh2" firstAttribute="top" secondItem="8KI-7p-6xq" secondAttribute="bottom" constant="8" id="kCO-L0-Fs2"/>
+                            <constraint firstItem="sTj-83-1ii" firstAttribute="top" secondItem="qgu-ro-Lh2" secondAttribute="bottom" constant="8" id="maF-4p-Rf3"/>
+                            <constraint firstItem="sTj-83-1ii" firstAttribute="leading" secondItem="Vs3-Xl-1IY" secondAttribute="leading" constant="16" id="wOu-yd-PKM"/>
+                            <constraint firstItem="5vh-Sm-JSE" firstAttribute="top" secondItem="sTj-83-1ii" secondAttribute="bottom" constant="8" id="xYx-6t-l7q"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Vs3-Xl-1IY"/>
+                    </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="goalSlider" destination="sTj-83-1ii" id="OYR-PB-skY"/>
+                        <outlet property="goalText" destination="qgu-ro-Lh2" id="F6y-5D-5uK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Oeg-gO-4RW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1519" y="373"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="JFg-hp-R9N">
             <objects>
@@ -224,10 +334,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="hc2-dX-PFH">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
                         <textAttributes key="largeTitleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -245,6 +355,7 @@
     </scenes>
     <resources>
         <image name="driving" width="128" height="128"/>
-        <image name="steps" width="64" height="64"/>
+        <image name="steps" width="128" height="128"/>
+        <image name="trophy" width="128" height="128"/>
     </resources>
 </document>
